Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1269,9 +1269,9 @@
     "\n",
     "In matrix form:\n",
     "\n",
-    "$$d\\mathbf{Z}^{(1)} = \\left[ \\mathbf{W}^{(2)} \\right]^{T} d\\mathbf{Z}^{(2)} \\odot g'_{ReLU}(\\mathbf{Z}^{(1)})$$\n",
+    "$$d\\mathbf{Z}^{(1)} = \\left[ \\mathbf{W}^{(1)} \\right]^{T} d\\mathbf{Z}^{(2)} \\odot g'_{ReLU}(\\mathbf{Z}^{(1)})$$\n",
     "\n",
-    "where $\\mathbf{W}^{(2)} \\in \\mathbb{R}^{n_{1} \\times n_{2}} \\text{ ; } d\\mathbf{Z}^{(2)} \\text{ , } g'_{ReLU}(\\mathbf{Z}^{(1)}) \\in \\mathbb{R}^{n_{2} \\times M} \\text{ ; } d\\mathbf{Z}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M}$ ($n_{1} = 10 \\text{ , } n_{2} = 10$ in this digit recognition example and $M$ is the size of training data.) \n",
+    "where $\\left[ \\mathbf{W}^{(1)} \\right]^{T} \\in \\mathbb{R}^{n_{1} \\times n_{2}} \\text{ ; } d\\mathbf{Z}^{(2)} \\text{ , } g'_{ReLU}(\\mathbf{Z}^{(1)}) \\in \\mathbb{R}^{n_{2} \\times M} \\text{ ; } d\\mathbf{Z}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M}$ ($n_{1} = 10 \\text{ , } n_{2} = 10$ in this digit recognition example and $M$ is the size of training data.) \n",
     "\n",
     "Note $\\odot$ represents Hadamard product which multiplies corresponding elements.\n",
     "\n",
