Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1117,11 +1117,11 @@
     "\n",
     "$$ \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{k}} \n",
     "= \\sum_{i = 1}^{10}\\dfrac{\\partial C_{m}}{\\partial a^{(2)}_{i}} \\cdot \\dfrac{\\partial a^{(2)}_{i}}{\\partial z^{(2)}_{k}} \n",
-    "= \\sum_{i = 1}^{10}-\\dfrac{y_{i}}{a^{(2)}_{j}} \\cdot a^{(2)}_{j} \\cdot \\left[\\mathbb{I}(i=j) - a^{(2)}_{j} \\right] $$\n",
+    "= \\sum_{i = 1}^{10}-\\dfrac{y_{i}}{a^{(2)}_{i}} \\cdot a^{(2)}_{i} \\cdot \\left[\\mathbb{I}(i=k) - a^{(2)}_{k} \\right] $$\n",
     "\n",
-    "$$ = \\sum_{i = 1}^{10} \\left( y_{i} \\cdot a^{(2)}_{j} \\right) -\\sum_{i = 1}^{10} \\left( y_{i} \\cdot \\mathbb{I}(i = j) \\right) = a^{(2)}_{j} \\cdot \\sum_{i = 1}^{10}(y_{i}) - y_{j} $$\n",
+    "$$ = \\sum_{i = 1}^{10} \\left( y_{i} \\cdot a^{(2)}_{k} \\right) -\\sum_{i = 1}^{10} \\left( y_{i} \\cdot \\mathbb{I}(i = k) \\right) = a^{(2)}_{k} \\cdot \\sum_{i = 1}^{10}(y_{i}) - y_{k} $$\n",
     "\n",
-    "$$ = a^{(2)}_{j} - y_{j} $$\n",
+    "$$ = a^{(2)}_{k} - y_{k} $$\n",
     "\n",
     "Note that $\\sum_{i = 1}^{10}(y_{i}) = 1$. Since $\\mathbf{y}$ is a column vector of desired output, which is 1 for the correct label prediction, 0 for the rest. \n",
     "\n",
