Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "Each of these pixel corresponds to a neuron in the input layer of our neural network. For every neuron in this input layer, it typically represents a concept -- in this case, the brightness or intensity of the respective pixel in the image. The brighter the pixel, the higher the activation value for the corresponding neuron.\n",
     "\n",
-    "In image representation in computers, grayscale images are typically represented using 8 bits per pixel. This means the activation value of the neuron can have integer values between 0 and 255, where 0 represents black (no brightness) and 255 represents white (maximum brightness)."
+    "In image representation in computers, grayscale images are typically represented using 8 bits per pixel. This means the activation value of the neuron in the input layer can have integer values between 0 and 255, where 0 represents black (no brightness) and 255 represents white (maximum brightness)."
    ]
   },
   {
@@ -515,7 +515,7 @@
     "\\end{array}\n",
     "\\right)\n",
     "\n",
-    "= g(W^{(0)}\\mathbf{a^{(0)}} + \\mathbf{b^{(1)}})\n",
+    "= g(\\mathbf{W}^{(0)}\\mathbf{a^{(0)}} + \\mathbf{b^{(1)}})\n",
     "\n",
     "= g\n",
     "\\left(\n",
@@ -549,7 +549,7 @@
     "= \\mathbf{a}^{(1)}\n",
     "$$\n",
     "\n",
-    "$\\text{where}: W^{(0)} \\text{ is an } n_{1} \\times n_{0} \\text{ matrix, } \\mathbf{a^{(0)}} \\text{ is a column vector of size } n_{0} \\text{ , } \\mathbf{b^{(1)}} \\text{ , } \\mathbf{z}^{(1)} \\text{ and } \\mathbf{a}^{(1)}  \\text{ are column vectors of size } n_{1}$\n",
+    "$\\text{where}: \\mathbf{W}^{(0)} \\text{ is an } n_{1} \\times n_{0} \\text{ matrix, } \\mathbf{a^{(0)}} \\text{ is a column vector of size } n_{0} \\text{ , } \\mathbf{b^{(1)}} \\text{ , } \\mathbf{z}^{(1)} \\text{ and } \\mathbf{a}^{(1)}  \\text{ are column vectors of size } n_{1}$\n",
     "\n",
     "This process is known as **Forward Propagation**. This process will continue through to the last layer $L^{th}$ layer (the output layer), which will provide the output we are interested in predicting.\n",
     "\n",
@@ -713,7 +713,7 @@
     "\n",
     "$$D_{\\mathbf{u}}(f) = \\nabla{f} \\cdot \\mathbf{u} \\text{ where } \\mathbf{u} \\text{ is a unit vector i.e } \\text{ the magnitude of } \\mathbf{u} \\text{ , } \\lVert \\mathbf{u} \\rVert = 1$$ \n",
     "\n",
-    "The directional derivative can be interpreted as the length of the projection of the gradient vector $\\nabla{f}$ onto the direction of the unit vector $\\mathbf{u}$. Note that $D_{u}(f)$ is a scalar quantity and $\\nabla{f}$ is a vector quantity. (Refer to Figure 6)\n",
+    "The directional derivative can be interpreted as the length of the projection of the gradient vector $\\nabla{f}$ onto the direction of the unit vector $\\mathbf{u}$. Note that $D_{\\mathbf{u}}(f)$ is a scalar quantity and $\\nabla{f}$ is a vector quantity. (Refer to Figure 6)\n",
     "\n",
     "Length of projection formula is given by: \n",
     "\n",
@@ -724,9 +724,9 @@
     "\n",
     "In Figure 6, notice we have a right-angled triangle, so we can establish the following relationship:\n",
     "\n",
-    "$$ cos(\\theta) = \\dfrac{D_{u}(f)}{\\lVert \\nabla{f} \\rVert} \\implies  D_{u}(f) = \\lVert \\nabla{f} \\rVert cos(\\theta)$$\n",
+    "$$ cos(\\theta) = \\dfrac{D_{\\mathbf{u}}(f)}{\\lVert \\nabla{f} \\rVert} \\implies  D_{\\mathbf{u}}(f) = \\lVert \\nabla{f} \\rVert cos(\\theta)$$\n",
     "\n",
-    "Since $\\lVert \\nabla{f} \\rVert$ is fixed relative to the point, the rate of change is controlled by $cos(\\theta)$. Given that $ -1 \\leq cos(\\theta) \\leq 1$, the maximum rate of change occurs when $cos(\\theta) = 1$, which corresponds to $\\theta = 0$. This means that the unit vector $\\mathbf{u}$ that results in the greatest rate of change of $f$ is in the direction of the gradient vector $\\nabla{f}$ itself. \n",
+    "Since $\\lVert \\nabla{f} \\rVert$ is fixed relative to the point, the rate of change is controlled by $cos(\\theta)$. Given that $ -1 \\leq cos(\\theta) \\leq 1$, the maximum rate of change occurs when $cos(\\theta) = 1$, which corresponds to $\\theta = 0$. This means that the unit vector $\\mathbf{u}$ that results in the maximum rate of change of $f$ is in the direction of the gradient vector $\\nabla{f}$ itself. \n",
     "\n",
     "Therefore, we can conclude that the direction of the gradient vector is the **direction of the steepest ascent**, which indicates the direction in which the function $f$ increases most rapidly. Conversely, moving in the opposite direction, $-\\nabla{f}$, is the **direction of the steepest descent**. This principle forms the foundation of **gradient descent**, a key optimisation technique used to minimise the cost function in the most efficient way.\n",
     "\n",
@@ -834,7 +834,7 @@
     "\n",
     "$$ \\dfrac{\\partial C}{\\partial a^{(L-2)}_{1}} = \\dfrac{\\partial C}{\\partial a^{(L-1)}_{1}} \\cdot \\dfrac{\\partial a^{(L-1)}_{1}}{\\partial z^{(L-1)}_{1}} \\cdot \\dfrac{\\partial z^{(L-1)}_{1}}{\\partial a^{(L-2)}_{1}} = \\dfrac{\\partial C}{\\partial a^{(L-1)}_{1}} \\cdot g'(z^{(L-1)}_{1}) \\cdot w^{(L-2)}_{1,1}$$\n",
     "\n",
-    "Notice to find the partial derivative of $C$ with respect to the weight and bias parameters in the $(L-2)^{th}$ layer, all of them needs $\\dfrac{\\partial C}{\\partial a^{(L-1)}_{1}}$. Similarly, we use $\\dfrac{\\partial z^{(L-1)}_{1}}{\\partial a^{(L-2)}_{1}}$ to find the partial derivatives of $C$ with respect to the weight and bias parameters in the $(L-3)^{th}$ layer. \n",
+    "Notice to find the partial derivative of $C$ with respect to the weight and bias parameters in the $(L-2)^{th}$ layer, all of them needs $\\dfrac{\\partial C}{\\partial a^{(L-1)}_{1}}$. Similarly, we use $\\dfrac{\\partial C}{\\partial a^{(L-2)}_{1}}$ to find the partial derivatives of $C$ with respect to the weight and bias parameters in the $(L-3)^{th}$ layer. \n",
     "\n",
     "This process continues layer by layer, moving backwards through the network until we reach to the $0^{th}$ layer (input layer). \n",
     "\n",
@@ -908,7 +908,7 @@
     "\n",
     "$$ = \\dfrac{e^{z^{(L)}_{i}}}{\\sum_{k=1}^{n_{L}}{e^{z^{(L)}_{k}}}} \\cdot \\left( 1- \\dfrac{e^{z^{(L)}_{i}}}{\\sum_{k=1}^{n_{L}}{e^{z^{(L)}_{k}}}} \\right) $$ \n",
     "\n",
-    "$$ = a^{(L)}_{k} \\cdot \\left( 1 - a^{(L)}_{k} \\right )  = p_{i} \\cdot (1 - p_{i})$$\n",
+    "$$ = a^{(L)}_{i} \\cdot \\left( 1 - a^{(L)}_{i} \\right )  = p_{i} \\cdot (1 - p_{i})$$\n",
     "\n",
     "If $i \\neq j$, then:\n",
     "\n",
@@ -971,7 +971,7 @@
    "source": [
     "We consider a 3-layer neural network for digit recognition.\n",
     "\n",
-    "**Input Layer ($0^{th}$ layer)** \n",
+    "#### **Input Layer ($0^{th}$ layer)** \n",
     "\n",
     "- The input layer will have 784 neurons corresponding to the 784 pixels in each 28 x 28 input image. \n",
     "\n",
@@ -983,7 +983,7 @@
     "\n",
     "$$\\mathbf{A}^{(0)} \\in \\mathbb{R}^{784 \\times M}$$\n",
     "\n",
-    "**Hidden Layer ($1^{st}$ layer)** \n",
+    "#### **Hidden Layer ($1^{st}$ layer)** \n",
     "\n",
     "- The hidden layer will have 10 neurons with ReLU activation function.\n",
     "\n",
@@ -995,7 +995,7 @@
     "\n",
     "$$\\mathbf{A}^{(1)} \\in \\mathbb{R}^{10 \\times M}$$\n",
     "\n",
-    "**Output Layer ($2^{nd}$ layer)** \n",
+    "#### **Output Layer ($2^{nd}$ layer)** \n",
     "\n",
     "- The hidden layer will have 10 neurons with Softmax activation function, producing a probability distribution over the 10 digit classes (0-9).\n",
     "\n",
