Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1116,8 +1116,8 @@
     "General entry for $d\\mathbf{Z}^{(2)}$ is defined as:\n",
     "\n",
     "$$ \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{k}} \n",
-    "= \\sum_{i = 1}^{10}\\dfrac{\\partial C_{m}}{\\partial a^{(2)}_{i}} \\cdot \\dfrac{\\partial a^{(2)}_{i}}{\\partial z^{(2)}_{k}} \n",
-    "= \\sum_{i = 1}^{10}-\\dfrac{y_{i}}{a^{(2)}_{i}} \\cdot a^{(2)}_{i} \\cdot \\left[\\mathbb{I}(i=k) - a^{(2)}_{k} \\right] $$\n",
+    "= \\sum_{i = 1}^{10}\\left( \\dfrac{\\partial C_{m}}{\\partial a^{(2)}_{i}} \\cdot \\dfrac{\\partial a^{(2)}_{i}}{\\partial z^{(2)}_{k}} \\right)\n",
+    "= \\sum_{i = 1}^{10}\\left( -\\dfrac{y_{i}}{a^{(2)}_{i}} \\cdot a^{(2)}_{i} \\cdot \\left[\\mathbb{I}(i=k) - a^{(2)}_{k} \\right] \\right) $$\n",
     "\n",
     "$$ = \\sum_{i = 1}^{10} \\left( y_{i} \\cdot a^{(2)}_{k} \\right) -\\sum_{i = 1}^{10} \\left( y_{i} \\cdot \\mathbb{I}(i = k) \\right) = a^{(2)}_{k} \\cdot \\sum_{i = 1}^{10}(y_{i}) - y_{k} $$\n",
     "\n",
@@ -1241,15 +1241,15 @@
     "General entry for $d\\mathbf{Z}^{(1)}$ is defined as:\n",
     "\n",
     "$$\\dfrac{\\partial C_{m}}{\\partial z^{(1)}_{j}} \n",
-    "= \\sum_{i=1}^{n_{1}} \\dfrac{\\partial C_{m}}{\\partial a^{(1)}_{i}} \\cdot \\dfrac{\\partial a^{(1)}_{i}}{\\partial z^{(1)}_{j}}\n",
+    "= \\sum_{i=1}^{n_{1}} \\left( \\dfrac{\\partial C_{m}}{\\partial a^{(1)}_{i}} \\cdot \\dfrac{\\partial a^{(1)}_{i}}{\\partial z^{(1)}_{j}} \\right)\n",
     "$$\n",
     "\n",
     "First, we find:\n",
     "\n",
     "$$\\dfrac{\\partial C_{m}}{\\partial a^{(1)}_{j}} \n",
-    "= \\sum_{i=1}^{n_{2}} \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{i}} \\cdot \\dfrac{\\partial z^{(2)}_{i}}{\\partial a^{(1)}_{j}} \n",
-    "= \\sum_{i=1}^{n_{2}} \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{i}} \\cdot w^{(1)}_{i,j}\n",
-    "= \\sum_{i=1}^{n_{2}} w^{(1)}_{i,j} \\cdot \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{i}} \n",
+    "= \\sum_{i=1}^{n_{2}} \\left( \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{i}} \\cdot \\dfrac{\\partial z^{(2)}_{i}}{\\partial a^{(1)}_{j}} \\right)\n",
+    "= \\sum_{i=1}^{n_{2}} \\left( \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{i}} \\cdot w^{(1)}_{i,j} \\right)\n",
+    "= \\sum_{i=1}^{n_{2}} \\left( w^{(1)}_{i,j} \\cdot \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{i}} \\right)\n",
     "$$\n",
     "\n",
     "which is the $(j,m)$ entry of the matrix $\\left[\\mathbf{W}^{(1)} \\right]^{T} d\\mathbf{Z}^{(2)}$\n",
