Fixed some mistake

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -515,7 +515,7 @@
     "\\end{array}\n",
     "\\right)\n",
     "\n",
-    "= g(\\mathbf{W}^{(0)}\\mathbf{a^{(0)}} + \\mathbf{b^{(1)}})\n",
+    "= g(\\mathbf{W}^{(0)}\\mathbf{a}^{(0)} + \\mathbf{b^{(1)}})\n",
     "\n",
     "= g\n",
     "\\left(\n",
@@ -549,7 +549,7 @@
     "= \\mathbf{a}^{(1)}\n",
     "$$\n",
     "\n",
-    "$\\text{where}: \\mathbf{W}^{(0)} \\text{ is an } n_{1} \\times n_{0} \\text{ matrix, } \\mathbf{a^{(0)}} \\text{ is a column vector of size } n_{0} \\text{ , } \\mathbf{b^{(1)}} \\text{ , } \\mathbf{z}^{(1)} \\text{ and } \\mathbf{a}^{(1)}  \\text{ are column vectors of size } n_{1}$\n",
+    "$\\text{where}: \\mathbf{W}^{(0)} \\text{ is an } n_{1} \\times n_{0} \\text{ matrix, } \\mathbf{a}^{(0)} \\text{ is a column vector of size } n_{0} \\text{ , } \\mathbf{b}^{(1)} \\text{ , } \\mathbf{z}^{(1)} \\text{ and } \\mathbf{a}^{(1)}  \\text{ are column vectors of size } n_{1}$\n",
     "\n",
     "This process is known as **Forward Propagation**. This process will continue through to the last layer $L^{th}$ layer (the output layer), which will provide the output we are interested in predicting.\n",
     "\n",
@@ -575,7 +575,7 @@
     "\n",
     "The softmax activation function $g$ is given by this formula:\n",
     "\n",
-    "$$a^{(L)}_{i} = p_{i} = g(\\mathbf{z^{(L)}})_{i} = \\dfrac{e^{z^{(L)}_{i}}}{\\sum_{k=1}^{n_{L}}{e^{z^{(L)}_{k}}}} \\text{ , notice that } \\sum_{i=1}^{n_{L}}{p_{i}} = 1$$\n",
+    "$$a^{(L)}_{i} = p_{i} = g(\\mathbf{z}^{(L)})_{i} = \\dfrac{e^{z^{(L)}_{i}}}{\\sum_{k=1}^{n_{L}}{e^{z^{(L)}_{k}}}} \\text{ , notice that } \\sum_{i=1}^{n_{L}}{p_{i}} = 1$$\n",
     "\n",
     "In the case of digit recognition example, we will apply 3-layers neural network (further explained in Section 4), the activation scores in the last layer will be passed through the softmax as such:\n",
     "\n",
@@ -641,20 +641,20 @@
     "\n",
     "- For regression problem, we use the Squared Error:\n",
     "\n",
-    " $$ C_{m}(\\mathbf{a^{(L)}}, \\mathbf{y})= \\sum_{i=1}^{n_{\\scriptscriptstyle L}}{(a^{(L)}_{i,m}-y_{i,m})^2} $$\n",
+    " $$ C_{m}(\\mathbf{a}^{(L)}, \\mathbf{y})= \\sum_{i=1}^{n_{\\scriptscriptstyle L}}{(a^{(L)}_{i,m}-y_{i,m})^2} $$\n",
     "\n",
     "- For classification problem, we use the Cross-Entropy:\n",
-    "$$ C_{m}(\\mathbf{a^{(L)}}, \\mathbf{y}) = -\\sum_{i=1}^{n_{L}}{y_{i,m} \\cdot \\log{ \\left( a^{(L)}_{i,m} \\right)}}$$\n",
+    "$$ C_{m}(\\mathbf{a}^{(L)}, \\mathbf{y}) = -\\sum_{i=1}^{n_{L}}{y_{i,m} \\cdot \\log{ \\left( a^{(L)}_{i,m} \\right)}}$$\n",
     "\n",
     "where $\\mathbf{y}$ is a column vector representing the desired activation value for each neuron in the last layer.\n",
     "\n",
     "To compute the overall cost of $M$ training data points, the total cost function $C$, which is the function we are interested in minimising, is given by the average of the individual costs:\n",
     "\n",
-    "$$ C(\\mathbf{A^{(L)}}, \\mathbf{Y}) = \\dfrac{1}{M}\\sum_{m=1}^{M} C_{m}(\\mathbf{a^{(L)}}, \\mathbf{y}) $$\n",
+    "$$ C(\\mathbf{A}^{(L)}, \\mathbf{Y}) = \\dfrac{1}{M}\\sum_{m=1}^{M} C_{m}(\\mathbf{a^{(L)}}, \\mathbf{y}) $$\n",
     "\n",
-    "where $ \\mathbf{A^{(L)}} \\text{ , } \\mathbf{Y} \\in \\mathbb{R}^{n_{L} \\times M} $. The dimension of the matrices and the entries are further illustrated in Section 4, where we apply the concepts to the digit recogniser dataset.\n",
+    "where $ \\mathbf{A}^{(L)} \\text{ , } \\mathbf{Y} \\in \\mathbb{R}^{n_{L} \\times M} $. The dimension of the matrices and the entries are further illustrated in Section 4, where we apply the concepts to the digit recogniser dataset.\n",
     "\n",
-    "Notice that $\\mathbf{a^{(L)}}$ are activation scores derived from the weights and biases parameters in all the previous layers. Therefore the cost function $C$ depends on all the weights $w$ and biases $b$ parameters. \n",
+    "Notice that $\\mathbf{a}^{(L)}$ are activation scores derived from the weights and biases parameters in all the previous layers. Therefore the cost function $C$ depends on all the weights $w$ and biases $b$ parameters. \n",
     "\n",
     "We want to fine-tune these parameters by minimising $C$. One conventional method is to take the partial derivatives, for example:\n",
     "\n",
@@ -921,7 +921,7 @@
     "Therefore:\n",
     "\n",
     "$$\n",
-    "\\dfrac{\\partial a^{L}_{i}}{\\partial z^{(L)}_{j}} = \n",
+    "\\dfrac{\\partial a^{(L)}_{i}}{\\partial z^{(L)}_{j}} = \n",
     "\\dfrac{\\partial g(\\mathbf{z}^{(L)})_{i}}{\\partial z^{(L)}_{j}} =\n",
     "\\begin{cases}\n",
     "a^{(L)}_{i} \\cdot \\left( 1 - a^{(L)}_{i} \\right ) \\text{ , if } i = j \\\\\n",
