Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -446,7 +446,7 @@
     "\n",
     "In mathematical notation:\n",
     "\n",
-    "$$z^{(1)}_{1} = w^{(0)}_{1,1} \\cdot a^{(0)}_{1} + w^{(0)}_{1,2} \\cdot a^{(0)}_{2} + ... + w^{(0)}_{1,k} \\cdot a^{(0)}_{k} + ... + w^{(0)}_{1,n_{0}} \\cdot a^{(0)}_{n_{0}}$$\n",
+    "$$z^{(1)}_{1} = w^{(0)}_{1,1} \\cdot a^{(0)}_{1} + w^{(0)}_{1,2} \\cdot a^{(0)}_{2} + ... + w^{(0)}_{1,k} \\cdot a^{(0)}_{k} + ... + w^{(0)}_{1,n_{0}} \\cdot a^{(0)}_{n_{0}} + b^{(1)}_{1}$$\n",
     "\n",
     "$$a^{(1)}_{1} = g(z^{(1)}_{1}) \\text{ where } g \\text{ is the activation function.}$$"
    ]
@@ -855,7 +855,7 @@
     "\n",
     "Recall that:\n",
     "\n",
-    "$$z^{(L)}_{k} = w^{(L-1)}_{k,1} \\cdot a^{(L-1)}_{1} + w^{(L-1)}_{k,2} \\cdot a^{(L-1)}_{2} + ... + w^{(L-1)}_{k,j} \\cdot a^{(L-1)}_{j} + ... + w^{(L-1)}_{k,n_{(L-1)}} \\cdot a^{(L-1)}_{n_{(L-1)}}$$\n",
+    "$$z^{(L)}_{k} = w^{(L-1)}_{k,1} \\cdot a^{(L-1)}_{1} + w^{(L-1)}_{k,2} \\cdot a^{(L-1)}_{2} + ... + w^{(L-1)}_{k,j} \\cdot a^{(L-1)}_{j} + ... + w^{(L-1)}_{k,n_{(L-1)}} \\cdot a^{(L-1)}_{n_{(L-1)}} + b^{(L)}_{k}$$\n",
     "\n",
     "$$a^{(L)}_{k} = g(z^{(L)}_{k}) \\text{ where } g \\text{ is the activation function.}$$\n",
     "\n",
