Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1130,8 +1130,23 @@
     "In matrix form and the explicit form: \n",
     "\n",
     "$$ \n",
-    "d\\mathbf{Z^{(2)}} = \\mathbf{A^{(2)}} - \\mathbf{Y} = \n",
+    "d\\mathbf{Z^{(2)}} = \\mathbf{A^{(2)}} - \\mathbf{Y}\n",
+    "$$\n",
     "\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\implies\n",
+    "\\left[\n",
+    "\\begin{matrix}\n",
+    "\\dfrac{\\partial C_{1}}{\\partial z^{(2)}_{1}} & \\dfrac{\\partial C_{2}}{\\partial z^{(2)}_{1}} & \\cdots & \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{1}}& \\cdots & \\dfrac{\\partial C_{M}}{\\partial z^{(2)}_{1}} \\\\\n",
+    "\\vdots & \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "\\dfrac{\\partial C_{1}}{\\partial z^{(2)}_{k}} & \\dfrac{\\partial C_{2}}{\\partial z^{(2)}_{k}} & \\cdots & \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{k}}& \\cdots & \\dfrac{\\partial C_{M}}{\\partial z^{(2)}_{k}} \\\\\n",
+    "\\vdots & \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "\\dfrac{\\partial C_{1}}{\\partial z^{(2)}_{10}} & \\dfrac{\\partial C_{2}}{\\partial z^{(2)}_{10}} & \\cdots & \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{10}}& \\cdots & \\dfrac{\\partial C_{M}}{\\partial z^{(2)}_{10}} \\\\\n",
+    "\\end{matrix}\n",
+    "\\right]\n",
+    "=\n",
     "\\left[\n",
     "\\begin{matrix}\n",
     "a^{(2)}_{1,1} & a^{(2)}_{1,2} & \\cdots & a^{(2)}_{1,m} & \\cdots & a^{(2)}_{1,M} \\\\\n",
@@ -1152,7 +1167,6 @@
     "y_{10,1} & y_{10,2} & \\cdots & y_{10,m} & \\cdots & y_{10,M} \\\\\n",
     "\\end{matrix}\n",
     "\\right]\n",
-    "\n",
     "$$\n",
     "\n",
     "where $ d\\mathbf{Z^{(2)}} \\text{ , } \\mathbf{A^{(2)}} \\text{ , } \\mathbf{Y} \\in \\mathbb{R}^{n_{2} \\times M}$ ($n_{2} = 10$ in this digit recognition example and $M$ is the number of training data.)\n",
