Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -650,7 +650,7 @@
     "\n",
     "To compute the overall cost of $M$ training data points, the total cost function $C$, which is the function we are interested in minimising, is given by the average of the individual costs:\n",
     "\n",
-    "$$ C(\\mathbf{A}^{(L)}, \\mathbf{Y}) = \\dfrac{1}{M}\\sum_{m=1}^{M} C_{m}(\\mathbf{a^{(L)}}, \\mathbf{y}) $$\n",
+    "$$ C(\\mathbf{A}^{(L)}, \\mathbf{Y}) = \\dfrac{1}{M}\\sum_{m=1}^{M} C_{m}(\\mathbf{a}^{(L)}, \\mathbf{y}) $$\n",
     "\n",
     "where $ \\mathbf{A}^{(L)} \\text{ , } \\mathbf{Y} \\in \\mathbb{R}^{n_{L} \\times M} $. The dimension of the matrices and the entries are further illustrated in Section 4, where we apply the concepts to the digit recogniser dataset.\n",
     "\n",
@@ -1130,10 +1130,8 @@
     "In matrix form and the explicit form: \n",
     "\n",
     "$$ \n",
-    "d\\mathbf{Z^{(2)}} = \\mathbf{A^{(2)}} - \\mathbf{Y}\n",
+    "d\\mathbf{Z}^{(2)} = \\mathbf{A}^{(2)} - \\mathbf{Y}\n",
     "$$\n",
-    "\n",
-    "\n",
     "\n",
     "$$\n",
     "\\implies\n",
@@ -1169,7 +1167,7 @@
     "\\right]\n",
     "$$\n",
     "\n",
-    "where $ d\\mathbf{Z^{(2)}} \\text{ , } \\mathbf{A^{(2)}} \\text{ , } \\mathbf{Y} \\in \\mathbb{R}^{n_{2} \\times M}$ ($n_{2} = 10$ in this digit recognition example and $M$ is the number of training data.)\n",
+    "where $ d\\mathbf{Z}^{(2)} \\text{ , } \\mathbf{A^{(2)}} \\text{ , } \\mathbf{Y} \\in \\mathbb{R}^{n_{2} \\times M}$ ($n_{2} = 10$ in this digit recognition example and $M$ is the number of training data.)\n",
     "\n",
     "\n",
     "##### $ \\text{ 1b) Matrix } d\\mathbf{B}^{(2)}$\n",
