Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1360,7 +1360,7 @@
     "\n",
     "$$d\\mathbf{Z}^{(1)} = \\left[ \\mathbf{W}^{(1)} \\right]^{T} d\\mathbf{Z}^{(2)} \\odot g'_{ReLU}(\\mathbf{Z}^{(1)})$$\n",
     "\n",
-    "where $\\left[ \\mathbf{W}^{(1)} \\right]^{T} \\in \\mathbb{R}^{n_{1} \\times n_{2}} \\text{ ; } d\\mathbf{Z}^{(2)} \\text{ , } g'_{ReLU}(\\mathbf{Z}^{(1)}) \\in \\mathbb{R}^{n_{2} \\times M} \\text{ ; } d\\mathbf{Z}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M}$ ($n_{1} = 10 \\text{ , } n_{2} = 10$ in this digit recognition example and $M$ is the size of training data.) \n",
+    "where $\\left[ \\mathbf{W}^{(1)} \\right]^{T} \\in \\mathbb{R}^{n_{1} \\times n_{2}} \\text{ ; } d\\mathbf{Z}^{(2)} \\in \\mathbb{R}^{n_{2} \\times M} \\text{ ; } g'_{ReLU}(\\mathbf{Z}^{(1)}) \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } d\\mathbf{Z}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M}$ ($n_{1} = 10 \\text{ , } n_{2} = 10$ in this digit recognition example and $M$ is the size of training data.) \n",
     "\n",
     "Note $\\odot$ represents Hadamard product which multiplies corresponding elements.\n",
     "\n",
@@ -1424,7 +1424,7 @@
     "\n",
     "$$ d\\mathbf{b}^{(1)} = \\dfrac{1}{M} \\left( d\\mathbf{Z}^{(1)} \\mathbf{1}_{M} \\right)$$\n",
     "\n",
-    "where $ d\\mathbf{Z^{(1)}} \\in \\mathbb{R}^{n_{2} \\times M} \\text{ ; } d\\mathbf{b}^{(1)} \\in \\mathbb{R}^{n_{1}}$ ($n_{1} = 10 \\text{ ; } \\mathbf{1}\\in \\mathbb{R}^{M} $ in this digit recognition example and $M$ is the size of training data.)\n",
+    "where $ d\\mathbf{Z^{(1)}} \\in \\mathbb{R}^{n_{2} \\times M} \\text{ ; } d\\mathbf{b}^{(1)} \\in \\mathbb{R}^{n_{1}} \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} $ ($n_{1} = 10$ in this digit recognition example and $M$ is the size of training data.)\n",
     "\n",
     "#### **3. Input Layer ($0^{th}$ layer)**\n",
     "\n",
@@ -1434,7 +1434,7 @@
     "\n",
     "$$ d\\mathbf{W}^{(0)} = \\dfrac{1}{M} \\cdot d\\mathbf{Z}^{(1)} \\left[ \\mathbf{A}^{(0)} \\right]^{T} $$\n",
     "\n",
-    "where $d\\mathbf{W}^{(0)} \\in \\mathbb{R}^{n_{1} \\times n_{0}} \\text{ , } d\\mathbf{Z^{(1)}} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ , } \\left[ \\mathbf{A}^{(0)} \\right]^{T} \\in \\mathbb{R}^{M \\times n_{0}}$ ($n_{0} = 784 \\text{ , } n_{1} = 10$ in this digit recognition example and $M$ is the size of training data.)\n",
+    "where $d\\mathbf{W}^{(0)} \\in \\mathbb{R}^{n_{1} \\times n_{0}} \\text{ ; } d\\mathbf{Z^{(1)}} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } \\left[ \\mathbf{A}^{(0)} \\right]^{T} \\in \\mathbb{R}^{M \\times n_{0}}$ ($n_{0} = 784 \\text{ , } n_{1} = 10$ in this digit recognition example and $M$ is the size of training data.)\n",
     "\n",
     "#### **4. Updating the parameters**\n",
     "\n",
