Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1055,7 +1055,7 @@
     "\n",
     "$$ \\mathbf{Z}^{(1)} = \\mathbf{W}^{(0)}\\mathbf{X} + \\mathbf{b}^{(1)} \\mathbf{1}_{M}^{T}$$\n",
     "\n",
-    "where $W^{(0)} \\in \\mathbb{R}^{n_{1} \\times n_{0}} \\text{ ; } \\mathbf{X} \\in \\mathbb{R}^{n_{0} \\times M} \\text{ ; } \\mathbf{Z}^{(1)} \\text{ , } \\mathbf{b}^{(1)} \\in \\mathbb{R}^{n_{1}}  \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} \\text{ , where } \\mathbf{1} \\text{ is a column vector of ones (of size M) }$\n",
+    "where $ \\mathbf{Z}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } W^{(0)} \\in \\mathbb{R}^{n_{1} \\times n_{0}} \\text{ ; } \\mathbf{X} \\in \\mathbb{R}^{n_{0} \\times M} \\text{ ; } \\mathbf{b}^{(1)} \\in \\mathbb{R}^{n_{1}}  \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} \\text{ , where } \\mathbf{1} \\text{ is a column vector of ones (of size M) }$\n",
     "\n",
     "- Note that $\\mathbf{1}^{T}$ allows the bias vector $\\mathbf{b}^{(1)}$ to be added element-wise to each of column of $\\mathbf{W}^{(0)}\\mathbf{X}$. It means the bias is broadcasted across the columns, so each column of $\\mathbf{Z}^{(1)}$ receive the same bias vector.\n",
     "\n",
