Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -996,7 +996,7 @@
     "\\begin{matrix}\n",
     "a^{(0)}_{1,1} & a^{(0)}_{1,2} & \\cdots & a^{(0)}_{1,m} & \\cdots & a^{(0)}_{1,M} \\\\\n",
     "\\vdots & \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "a^{(0)}_{l,1} & a^{(0)}_{l,2} & \\cdots & a^{(0)}_{l,m} & \\cdots & a^{(0)}_{l,M} \\\\\n",
+    "a^{(0)}_{i,1} & a^{(0)}_{i,2} & \\cdots & a^{(0)}_{i,m} & \\cdots & a^{(0)}_{i,M} \\\\\n",
     "\\vdots & \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
     "a^{(0)}_{784,1} & a^{(0)}_{784,2} & \\cdots & a^{(0)}_{784,m} & \\cdots & a^{(0)}_{784,M} \\\\\n",
     "\\end{matrix}\n",
