Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1055,7 +1055,7 @@
     "\n",
     "$$ \\mathbf{Z}^{(1)} = \\mathbf{W}^{(0)}\\mathbf{X} + \\mathbf{b}^{(1)} \\mathbf{1}_{M}^{T}$$\n",
     "\n",
-    "where $ \\mathbf{Z}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } W^{(0)} \\in \\mathbb{R}^{n_{1} \\times n_{0}} \\text{ ; } \\mathbf{X} \\in \\mathbb{R}^{n_{0} \\times M} \\text{ ; } \\mathbf{b}^{(1)} \\in \\mathbb{R}^{n_{1}}  \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} \\text{ , where } \\mathbf{1} \\text{ is a column vector of ones (of size M) }$\n",
+    "where $ \\mathbf{Z}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } W^{(0)} \\in \\mathbb{R}^{n_{1} \\times n_{0}} \\text{ ; } \\mathbf{X} \\in \\mathbb{R}^{n_{0} \\times M} \\text{ ; } \\mathbf{b}^{(1)} \\in \\mathbb{R}^{n_{1}}  \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} \\text{ , } \\mathbf{1}_{M} \\text{ is a column vector of ones (of size M) }$\n",
     "\n",
     "- Note that $\\mathbf{1}^{T}$ allows the bias vector $\\mathbf{b}^{(1)}$ to be added element-wise to each of column of $\\mathbf{W}^{(0)}\\mathbf{X}$. It means the bias is broadcasted across the columns, so each column of $\\mathbf{Z}^{(1)}$ receive the same bias vector.\n",
     "\n",
@@ -1075,7 +1075,7 @@
     "\n",
     "$$ \\mathbf{Z}^{(2)} = \\mathbf{W}^{(1)}\\mathbf{A}^{(1)} + \\mathbf{b}^{(2)} \\mathbf{1}_{M}^{T}$$\n",
     "\n",
-    "where $\\mathbf{Z}^{(2)} \\in \\mathbb{R}^{n_{2} \\times M} \\text{ ; } W^{(1)} \\in \\mathbb{R}^{n_{2} \\times n_{1}} \\text{ ; } \\mathbf{A}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } \\mathbf{b}^{(2)} \\in \\mathbb{R}^{n_{2}} \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} \\text{ is a column vector of ones (of size M)}$\n",
+    "where $\\mathbf{Z}^{(2)} \\in \\mathbb{R}^{n_{2} \\times M} \\text{ ; } W^{(1)} \\in \\mathbb{R}^{n_{2} \\times n_{1}} \\text{ ; } \\mathbf{A}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } \\mathbf{b}^{(2)} \\in \\mathbb{R}^{n_{2}} \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} \\text{ , } \\mathbf{1}_{M}\\text{ is a column vector of ones (of size M)}$\n",
     "\n",
     "- $ \\mathbf{Z}^{(2)}$ is then being passed through the Softmax activation function to obtain the probability for the $2^{nd}$ layer:\n",
     "\n",
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1470,7 @@
     "    dZ2 = A2 - one_hot_Y\n",
     "    dW1 = 1 / M * dZ2.dot(A1.T)\n",
     "    db2 = 1 / M * np.sum(dZ2, axis = 1, keepdims = True) # axis = 1 means adding the elements by row, keepdims ensure that it is a 2D array with dimension of (10,1)\n",
-    "    dZ1 = W1.T.dot(dZ2) * ReLU_deriv(Z1)\n",
+    "    dZ1 = W1.T.dot(dZ2) * ReLU_deriv(Z1) # * in Python is the Hadamard product\n",
     "    dW0 = 1 / M * dZ1.dot(X.T)\n",
     "    db1 = 1 / M * np.sum(dZ1, axis = 1, keepdims = True) # Same explanation as db2\n",
     "    return dW0, db1, dW1, db2\n",
