--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1065,7 +1065,7 @@
     "\n",
     "$$ \\mathbf{A}^{(1)} = g_{ReLU}(\\mathbf{Z}^{(1)}) $$\n",
     "\n",
-    "where $\\mathbf{A}^{(1)} \\in \\mathbb{R}^{10 \\times M}$\n",
+    "where $\\mathbf{A}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M}$\n",
     "\n",
     "- Refer to the Section 2.3 Forward Propagation for the explicit matrix computation for one training data.\n",
     "\n",
@@ -1081,7 +1081,7 @@
     "\n",
     "$$ \\mathbf{A}^{(2)} = g_{softmax}(\\mathbf{Z}^{(2)}) $$\n",
     "\n",
-    "where $\\mathbf{A}^{(2)} \\in \\mathbb{R}^{10 \\times M}$"
+    "where $\\mathbf{A}^{(2)} \\in \\mathbb{R}^{n_{2} \\times M}$"
    ]
   },
   {
