--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1159,7 +1159,7 @@
     "d\\mathbf{Z}^{(2)} = \\mathbf{A}^{(2)} - \\mathbf{Y}\n",
     "$$\n",
     "\n",
-    "where $ d\\mathbf{Z}^{(2)} \\text{ , } \\mathbf{A^{(2)}} \\text{ , } \\mathbf{Y} \\in \\mathbb{R}^{n_{2} \\times M}$ ($n_{2} = 10$ in this digit recognition example and $M$ is the number of training data.)\n",
+    "where $ d\\mathbf{Z}^{(2)} \\text{ , } \\mathbf{A}^{(2)} \\text{ , } \\mathbf{Y} \\in \\mathbb{R}^{n_{2} \\times M}$ ($n_{2} = 10$ in this digit recognition example and $M$ is the number of training data.)\n",
     "\n",
     "In explicit form: \n",
     "\n",
@@ -1219,9 +1219,9 @@
     "\n",
     "In matrix form: \n",
     "\n",
-    "$$ d\\mathbf{b}^{(2)} = \\dfrac{1}{M} \\left( d\\mathbf{Z}^{(2)} \\mathbf{1}_{M} \\right)$$\n",
+    "$$ d\\mathbf{b}^{(2)} = \\dfrac{1}{M} \\cdot d\\mathbf{Z}^{(2)} \\mathbf{1}_{M} $$\n",
     "\n",
-    "where $ d\\mathbf{b}^{(2)} \\in \\mathbb{R}^{n_{2}} \\text{ ; } d\\mathbf{Z^{(2)}} \\in \\mathbb{R}^{n_{2} \\times M} \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} \\text{ , } \\mathbf{1}_{M} \\text{ is a column vector of ones (of size M) }$ ($n_{2} = 10$ in this digit recognition example and $M$ is the size of training data.)\n",
+    "where $ d\\mathbf{b}^{(2)} \\in \\mathbb{R}^{n_{2}} \\text{ ; } d\\mathbf{Z}^{(2)} \\in \\mathbb{R}^{n_{2} \\times M} \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} \\text{ , } \\mathbf{1}_{M} \\text{ is a column vector of ones (of size M) }$ ($n_{2} = 10$ in this digit recognition example and $M$ is the size of training data.)\n",
     "\n",
     "In explicit form:\n",
     "\n",
@@ -1286,7 +1286,7 @@
     "d\\mathbf{W}^{(1)} = \\dfrac{1}{M} \\cdot d\\mathbf{Z}^{(2)} \\left[ \\mathbf{A}^{(1)} \\right]^{T} \n",
     "$$\n",
     "\n",
-    "where $d\\mathbf{W}^{(1)} \\in \\mathbb{R}^{n_{2} \\times n_{1}} \\text{ , } d\\mathbf{Z^{(2)}} \\in \\mathbb{R}^{n_{2} \\times M} \\text{ , } \\left[ \\mathbf{A}^{(1)} \\right]^{T} \\in \\mathbb{R}^{M \\times n_{1}}$ ($n_{1} = 10 \\text{ , } n_{2} = 10$ in this digit recognition example and $M$ is the size of training data.)\n",
+    "where $d\\mathbf{W}^{(1)} \\in \\mathbb{R}^{n_{2} \\times n_{1}} \\text{ , } d\\mathbf{Z}^{(2)} \\in \\mathbb{R}^{n_{2} \\times M} \\text{ , } \\left[ \\mathbf{A}^{(1)} \\right]^{T} \\in \\mathbb{R}^{M \\times n_{1}}$ ($n_{1} = 10 \\text{ , } n_{2} = 10$ in this digit recognition example and $M$ is the size of training data.)\n",
     "\n",
     "In explicit form:\n",
     "$$\n",
@@ -1422,9 +1422,9 @@
     "\n",
     "Analogous to $d\\mathbf{b}^{(2)}$, the matrix form is defined as:\n",
     "\n",
-    "$$ d\\mathbf{b}^{(1)} = \\dfrac{1}{M} \\left( d\\mathbf{Z}^{(1)} \\mathbf{1}_{M} \\right)$$\n",
+    "$$ d\\mathbf{b}^{(1)} = \\dfrac{1}{M} \\cdot d\\mathbf{Z}^{(1)} \\mathbf{1}_{M} $$\n",
     "\n",
-    "where $  d\\mathbf{b}^{(1)} \\in \\mathbb{R}^{n_{1}} \\text{ ; } d\\mathbf{Z^{(1)}} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} \\text{ , } \\mathbf{1}_{M} \\text{ is a column vector of ones (of size M) }$ ($n_{1} = 10$ in this digit recognition example and $M$ is the size of training data.)\n",
+    "where $  d\\mathbf{b}^{(1)} \\in \\mathbb{R}^{n_{1}} \\text{ ; } d\\mathbf{Z}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} \\text{ , } \\mathbf{1}_{M} \\text{ is a column vector of ones (of size M) }$ ($n_{1} = 10$ in this digit recognition example and $M$ is the size of training data.)\n",
     "\n",
     "#### **3. Input Layer ($0^{th}$ layer)**\n",
     "\n",
@@ -1434,7 +1434,7 @@
     "\n",
     "$$ d\\mathbf{W}^{(0)} = \\dfrac{1}{M} \\cdot d\\mathbf{Z}^{(1)} \\left[ \\mathbf{A}^{(0)} \\right]^{T} $$\n",
     "\n",
-    "where $d\\mathbf{W}^{(0)} \\in \\mathbb{R}^{n_{1} \\times n_{0}} \\text{ ; } d\\mathbf{Z^{(1)}} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } \\left[ \\mathbf{A}^{(0)} \\right]^{T} \\in \\mathbb{R}^{M \\times n_{0}}$ ($n_{0} = 784 \\text{ , } n_{1} = 10$ in this digit recognition example and $M$ is the size of training data.)\n",
+    "where $d\\mathbf{W}^{(0)} \\in \\mathbb{R}^{n_{1} \\times n_{0}} \\text{ ; } d\\mathbf{Z}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } \\left[ \\mathbf{A}^{(0)} \\right]^{T} \\in \\mathbb{R}^{M \\times n_{0}}$ ($n_{0} = 784 \\text{ , } n_{1} = 10$ in this digit recognition example and $M$ is the size of training data.)\n",
     "\n",
     "#### **4. Updating the parameters**\n",
     "\n",
