Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -912,9 +912,9 @@
     "\n",
     "If $i \\neq j$, then:\n",
     "\n",
-    "$$ \\dfrac{\\partial g(\\mathbf{z}^{(L)})_{i}}{\\partial z^{(L)}_{j}} = -\\dfrac{z^{(L)}_{i}}{\\left( \\sum_{i=1}^{n_{L}}{e^{z^{(L)}_{i}}} \\right) ^2} \\cdot e^{z^{(L)}_{j}} $$ \n",
+    "$$ \\dfrac{\\partial g(\\mathbf{z}^{(L)})_{i}}{\\partial z^{(L)}_{j}} = -\\dfrac{z^{(L)}_{i}}{\\left( \\sum_{k=1}^{n_{L}}{e^{z^{(L)}_{k}}} \\right) ^2} \\cdot e^{z^{(L)}_{j}} $$ \n",
     "\n",
-    "$$ =  -\\dfrac{z^{(L)}_{i}}{\\sum_{i=1}^{n_{L}}{e^{z^{(L)}_{i}}}} \\cdot \\dfrac{z^{(L)}_{j}}{\\sum_{i=1}^{n_{L}}{e^{z^{(L)}_{i}}}} $$ \n",
+    "$$ =  -\\dfrac{z^{(L)}_{i}}{\\sum_{k=1}^{n_{L}}{e^{z^{(L)}_{k}}}} \\cdot \\dfrac{z^{(L)}_{j}}{\\sum_{k=1}^{n_{L}}{e^{z^{(L)}_{k}}}} $$ \n",
     "\n",
     "$$ = - a^{(L)}_{i} \\cdot a^{(L)}_{j} = -p_{i} \\cdot p_{j} $$\n",
     "\n",
@@ -1057,9 +1057,9 @@
     "\n",
     "where $ \\mathbf{Z}^{(1)} \\in \\mathbb{R}^{n_{1} \\times M} \\text{ ; } W^{(0)} \\in \\mathbb{R}^{n_{1} \\times n_{0}} \\text{ ; } \\mathbf{X} \\in \\mathbb{R}^{n_{0} \\times M} \\text{ ; } \\mathbf{b}^{(1)} \\in \\mathbb{R}^{n_{1}}  \\text{ ; } \\mathbf{1}_{M} \\in \\mathbb{R}^{M} \\text{ , } \\mathbf{1}_{M} \\text{ is a column vector of ones (of size M) }$\n",
     "\n",
-    "- Note that $\\mathbf{1}^{T}$ allows the bias vector $\\mathbf{b}^{(1)}$ to be added element-wise to each of column of $\\mathbf{W}^{(0)}\\mathbf{X}$. It means the bias is broadcasted across the columns, so each column of $\\mathbf{Z}^{(1)}$ receive the same bias vector.\n",
+    "- Note that $\\mathbf{1}_{M}^{T}$ allows the bias vector $\\mathbf{b}^{(1)}$ to be added element-wise to each of column of $\\mathbf{W}^{(0)}\\mathbf{X}$. It means the bias is broadcasted across the columns, so each column of $\\mathbf{Z}^{(1)}$ receive the same bias vector.\n",
     "\n",
-    "- Note that in the code, we donn't explicitly have $\\mathbf{1}^{T}$ in the computation. However, NumPy automatically broadcasts the bias vector $\\mathbf{b}^{(1)}$ to have the same shape as $\\mathbf{W}^{(0)}\\mathbf{X}$. This means that $\\mathbf{b}^{(1)}$ gets automatically repeated for each of the $M$ columns in $\\mathbf{W}^{(0)}\\mathbf{X}$\n",
+    "- Note that in the code, we donn't explicitly have $\\mathbf{1}_{M}^{T}$ in the computation. However, NumPy automatically broadcasts the bias vector $\\mathbf{b}^{(1)}$ to have the same shape as $\\mathbf{W}^{(0)}\\mathbf{X}$. This means that $\\mathbf{b}^{(1)}$ gets automatically repeated for each of the $M$ columns in $\\mathbf{W}^{(0)}\\mathbf{X}$\n",
     "\n",
     "- $ \\mathbf{Z}^{(1)}$ is then being passed through the ReLU activation function to obtain the activation scores for the $1^{st}$ layer:\n",
     "\n",
@@ -1371,7 +1371,7 @@
     "\\begin{matrix}\n",
     "\\dfrac{\\partial C_{1}}{\\partial z^{(1)}_{1}} & \\cdots & \\dfrac{\\partial C_{m}}{\\partial z^{(1)}_{1}}& \\cdots & \\dfrac{\\partial C_{M}}{\\partial z^{(1)}_{1}} \\\\\n",
     "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "\\dfrac{\\partial C_{1}}{\\partial z^{(1)}_{k}} & \\cdots & \\dfrac{\\partial C_{m}}{\\partial z^{(1)}_{k}}& \\cdots & \\dfrac{\\partial C_{M}}{\\partial z^{(1)}_{k}} \\\\\n",
+    "\\dfrac{\\partial C_{1}}{\\partial z^{(1)}_{j}} & \\cdots & \\dfrac{\\partial C_{m}}{\\partial z^{(1)}_{j}}& \\cdots & \\dfrac{\\partial C_{M}}{\\partial z^{(1)}_{j}} \\\\\n",
     "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
     "\\dfrac{\\partial C_{1}}{\\partial z^{(1)}_{10}} & \\cdots & \\dfrac{\\partial C_{m}}{\\partial z^{(1)}_{10}}& \\cdots & \\dfrac{\\partial C_{M}}{\\partial z^{(1)}_{10}} \\\\\n",
     "\\end{matrix}\n",
