Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1278,7 +1278,7 @@
     "\n",
     "$$ \\dfrac{\\partial C}{\\partial w^{(1)}_{k,j}} = \\dfrac{1}{M}\\sum_{m=1}^{M} \\dfrac{\\partial C_{m}}{\\partial w^{(1)}_{k,j}} \n",
     "\n",
-    "= \\dfrac{1}{M}\\sum_{i=1}^{M} \\left( \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{k}} \\cdot a^{(1)}_{j,m} \\right)$$\n",
+    "= \\dfrac{1}{M}\\sum_{m=1}^{M} \\left( \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{k}} \\cdot a^{(1)}_{j,m} \\right)$$\n",
     "\n",
     "In matrix form:\n",
     "\n",
