Fixed some spelling mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -859,7 +859,7 @@
     "\n",
     "$$a^{(L)}_{k} = g(z^{(L)}_{k}) \\text{ where } g \\text{ is the activation function.}$$\n",
     "\n",
-    "The key difference here is in the 3rd equation, where the parital derivative of $C_{m}$ with respect to the activation $a^{(L-1)}_{j}$ in the $(L-1)^{th}$ layer involves summing over all the neurons in the $L$ layer, as each neuron in the $(L-1)^{th}$ layer contributes to the all the $a^{(L)}_{k}$ for all $1 \\leq k \\leq n_{L}$ in the $L^{th}$ layer. \n",
+    "The key difference here is in the 3rd equation, where the parital derivative of $C_{m}$ with respect to the activation $a^{(L-1)}_{j}$ in the $(L-1)^{th}$ layer involves summing over all the neurons in the $L$ layer, as each neuron in the $(L-1)^{th}$ layer contributes to $a^{(L)}_{k}$ for all $1 \\leq k \\leq n_{L}$ in the $L^{th}$ layer. \n",
     "\n",
     "Notice the first 2 equations still remain the same as each weight and bias only directly influences one neuron in layer $L$, meaning no summation is required. **HOWEVER**, depending on the activation function $g$ (e.g Softmax) used, the partial derivative may not be as straightforward, as we will demonstrate in Section 4 later.\n",
     "\n",
@@ -871,7 +871,7 @@
     "\n",
     "$$ \\dfrac{\\partial C}{\\partial a^{(L-1)}_{j}} = \\dfrac{1}{M}\\sum_{m=1}^{M} \\dfrac{\\partial C_{m}}{\\partial a^{(L-1)}_{j}} $$\n",
     "\n",
-    "The process of **Forward Propagation** and **Back Propagation** will altenate, and this is how neural network gradually learns to optimise/fine-tune its parameters (weights & bias). So the visualisation of the cycle will look like:\n",
+    "The process of **Forward Propagation** and **Back Propagation** will alternate, and this is how neural network gradually learns to optimise/fine-tune its parameters (weights & bias). So the visualisation of the cycle will look like:\n",
     "\n",
     "***--- Forward Propagation → Cost Calculation → Backpropagation → Update Parameters → Repeat ---***\n",
     "\n",
