Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1388,7 +1388,7 @@
     "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
     "w^{(1)}_{j,1} & \\cdots & w^{(0)}_{j,k} & \\cdots & w^{(0)}_{j,10} \\\\\n",
     "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "w^{(0)}_{10,1} & \\cdots & w^{(0)}_{10,k} & \\cdots & \\cdots w^{(0)}_{10,10} \\\\\n",
+    "w^{(0)}_{10,1} & \\cdots & w^{(0)}_{10,k} & \\cdots & w^{(0)}_{10,10} \\\\\n",
     "\\end{matrix}\n",
     "\\right]\n",
     "\n",
