Fixed some mistakes

--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -1338,7 +1338,7 @@
     "$$\\dfrac{\\partial C_{m}}{\\partial a^{(1)}_{j}} \n",
     "= \\sum_{i=1}^{n_{2}} \\left( \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{i}} \\cdot \\dfrac{\\partial z^{(2)}_{i}}{\\partial a^{(1)}_{j}} \\right)\n",
     "= \\sum_{i=1}^{n_{2}} \\left( \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{i}} \\cdot w^{(1)}_{i,j} \\right)\n",
-    "= \\sum_{i=1}^{n_{2}} \\left( w^{(1)}_{i,j} \\cdot \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{i}} \\right)\n",
+    "= \\sum_{i=1}^{n_{2}} \\left( w^{(1)}_{j,i} \\cdot \\dfrac{\\partial C_{m}}{\\partial z^{(2)}_{i}} \\right)\n",
     "$$\n",
     "\n",
     "which is the $(j,m)$ entry of the matrix $\\left[\\mathbf{W}^{(1)} \\right]^{T} d\\mathbf{Z}^{(2)}$\n",
